# wildmeshing-toolkit

./: CMakeLists.txt  _a_m_i_p_s_optimization_smoothing_8cpp__incl.map  _a_m_i_p_s_optimization_smoothing_8cpp__incl.md5  _a_m_i_p_s_optimization_smoothing_8cpp_source.html  _a_m_i_p_s_optimization_smoothing_8hpp.html  _a_m_i_p_s_optimization_smoothing_8hpp__dep__incl.map  _a_m_i_p_s_optimization_smoothing_8hpp__dep__incl.md5  _a_m_i_p_s_optimization_smoothing_8hpp__incl.map  _a_m_i_p_s_optimization_smoothing_8hpp__incl.md5  _a_m_i_p_s_optimization_smoothing_8hpp_source.html  _a_m_i_p_s_optimization_smoothing_periodic_8cpp__incl.map  _a_m_i_p_s_optimization_smoothing_periodic_8cpp__incl.md5  _a_m_i_p_s_optimization_smoothing_periodic_8cpp_source.html  _a_m_i_p_s_optimization_smoothing_periodic_8hpp.html  _a_m_i_p_s_optimization_smoothing_periodic_8hpp__dep__incl.map  _a_m_i_p_s_optimization_smoothing_periodic_8hpp__dep__incl.md5  _a_m_i_p_s_optimization_smoothing_periodic_8hpp__incl.map  _a_m_i_p_s_optimization_smoothing_periodic_8hpp__incl.md5  _a_m_i_p_s_optimization_smoothing_periodic_8hpp_source.html  _accessor_8hpp.html  _accessor_8hpp__dep__incl.map  _accessor_8hpp__dep__incl.md5  _accessor_8hpp__incl.map  _accessor_8hpp__incl.md5  _accessor_8hpp_source.html  _accessor_8hxx__dep__incl.map  _accessor_8hxx__dep__incl.md5  _accessor_8hxx__incl.map  _accessor_8hxx__incl.md5  _accessor_8hxx_source.html  _accessor_base_8hpp__dep__incl.map  _accessor_base_8hpp__dep__incl.md5  _accessor_base_8hpp_source.html  _accessor_base_8hxx__dep__incl.map  _accessor_base_8hxx__dep__incl.md5  _accessor_base_8hxx_source.html  _and_operation_sequence_8cpp__incl.map  _and_operation_sequence_8cpp__incl.md5  _and_operation_sequence_8cpp_source.html  _and_operation_sequence_8hpp.html  (+10298 more)
applications/cad_isotropic_remeshing/: CMakeLists.txt  EigenMeshes.cpp  EigenMeshes.hpp  Mesh.cpp  Mesh.hpp  main.cpp
applications/cad_isotropic_remeshing/examples/: cad_isotropic_remeshing_config.json
applications/mesh_info/: CMakeLists.txt  main.cpp
src/wmtk/dart/: CMakeLists.txt  Dart.cpp  Dart.hpp  DartAccessor.hpp  DartTopologyAccessor.hpp  Involution.cpp  Involution.hpp  SimplexAdjacency.hpp  SimplexDart.cpp  SimplexDart.hpp  find_local_dart_action.hpp  get_simplex_dart.hpp  local_dart_action.cpp  local_dart_action.hpp  simplex_index_from_valid_index.cpp  simplex_index_from_valid_index.hpp  tuple_from_valid_index.cpp  tuple_from_valid_index.hpp  valid_index_from_tuple.cpp  valid_index_from_tuple.hpp
src/wmtk/dart/subgroup/: convert.hpp
src/wmtk/dart/utils/: CMakeLists.txt  apply_simplex_involution.cpp  apply_simplex_involution.hpp  edge_mirror.cpp  edge_mirror.hpp  from_local_vertex_permutation.cpp  from_local_vertex_permutation.hpp  get_canonical_cofaces.cpp  get_canonical_cofaces.hpp  get_canonical_faces.cpp  get_canonical_faces.hpp  get_canonical_simplex.hpp  get_canonical_simplex_orientation.hpp  get_canonical_simplices.cpp  get_canonical_simplices.hpp  get_canonical_subdart.hpp  get_canonical_subdart_permutation.hpp  get_canonical_supdart.hpp  get_cofaces.cpp  get_cofaces.hpp  get_faces.cpp  (+35 more)
(+784 files in other folders)
